--- a/INDEX..HTML
+++ b/INDEX..HTML
@@ -1,1 +1,12 @@
-<HL>que salve
+<!DOCTYPE html>
+<html lang="pt-br">
+    <h1>bora aprender</h1>
+
+    <p>não importa <strong>aprendizado</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. 
+    Fundada em 2022, o aprendizado já é destaque na cidade e conquista novos clientes a cada dia.</p>
+
+    <p><em>ensinos: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes"</strong>.</em></p>
+
+    <p>isto esta ajudando todos os clientes a um melhor futuro.</p>
+<p>isto e muito enportante.</p>
+</html>
