--- a/INDEX..HTML
+++ b/INDEX..HTML
@@ -4,9 +4,13 @@
 
     <p>não importa <strong>aprendizado</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. 
     Fundada em 2022, o aprendizado já é destaque na cidade e conquista novos clientes a cada dia.</p>
-
     <p><em>ensinos: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes"</strong>.</em></p>
 
-    <p>isto esta ajudando todos os clientes a um melhor futuro.</p>
-<p>isto e muito enportante.</p>
+    <p>isto esta ajudando todos os clientes a um melhor futuro.
+isto e muito enportante.
+agora irei lhe dar uma dica para criar seu propio negocio.
+como criei meu propio negocio.
+Eu peguei  o dinheiro que estava guardado no banco para investir em um negocio que iria trazer muito lucro para mim.</P>
+Com o dinheiro que eu estava guardando no banco abri uma hamburgueria para que eu tivesse uma renda melhor ,em pouco tempoeu ja tinha recuperado o dinheiro que eu tinha investido e ja tava guanhando uma renda melhor doque eu ganhava no meu antigo trabalho</P>
+E com o  tempo pude abrir novas hamburguerias em outras cidades e estados.</p>
 </html>
