--- a/INDEX..HTML
+++ b/INDEX..HTML
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
     <h1>bora aprender</h1>
 
     <p>não importa <strong>aprendizado</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. 
@@ -13,5 +14,5 @@ como criei meu propio negocio.
 Eu peguei  o dinheiro que estava guardado no banco para investir em um negocio que iria trazer muito lucro para mim.</P>
 Com o dinheiro que eu estava guardando no banco abri uma hamburgueria para que eu tivesse uma renda melhor ,em pouco tempoeu ja tinha recuperado o dinheiro que eu tinha investido e ja tava guanhando uma renda melhor doque eu ganhava no meu antigo trabalho</P>
 E com o  tempo pude abrir novas hamburguerias em outras cidades e estados.</p>
-<img srcset="banner.jpeg"
+<img srcset="banner.jpeg">
 </html>
