--- a/INDEX..HTML
+++ b/INDEX..HTML
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+DOCTYPE html>
 <html lang="pt-br">
 
     <h1>bora aprender</h1>
@@ -15,4 +15,4 @@ Eu peguei  o dinheiro que estava guardado no banco para investir em um negocio q
 Com o dinheiro que eu estava guardando no banco abri uma hamburgueria para que eu tivesse uma renda melhor ,em pouco tempoeu ja tinha recuperado o dinheiro que eu tinha investido e ja tava guanhando uma renda melhor doque eu ganhava no meu antigo trabalho</P>
 E com o  tempo pude abrir novas hamburguerias em outras cidades e estados.</p>
 <img srcset="banner.jpeg">
-</html>
+</html><!
